syntax = "proto3";

package file_service;

option go_package = "./proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service FileService {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse) {
    option (google.api.http) = {
      post: "/v1/files/upload"
      body: "*"
    };
  }

  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse) {
    option (google.api.http) = {
      get: "/v1/files/download/{name}"
    };
  }

  rpc ListFiles(google.protobuf.Empty) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/files/list"
    };
  }
}

message FileInfo {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message UploadRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk = 2;
  }
}

message UploadResponse {
  string name = 1;
  uint32 size = 2;
}

message DownloadRequest {
  string name = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}

message ListResponse {
  repeated FileInfo files = 1;
}